--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Todo App!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
+    <h1>Todo App!</h1>
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
